tests/traci/get_variable/ArealDetector/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 0xad: Get Lane Area Detector Variable: unsupported variable 0xff specified
